--- a/document-structure/cart/task.html
+++ b/document-structure/cart/task.html
@@ -12,6 +12,7 @@
     <!-- корзина -->
     <div class="cart">
         <div class="cart__title">Корзина</div>
+        <button class="cart__clear_btn">Очистить</button>
         <div class="cart__products">
             <!-- разметка добавленного в корзину товара -->
             <!--<div class="cart__product" data-id="1">
